before changing navigation and full screen header

--- a/features.html
+++ b/features.html
@@ -120,11 +120,11 @@
 								</div>
 
 							  	<!-- Controls -->
-								<a class="left carousel-control" href="#carousel-features-1" role="button" data-slide="prev">
-							    	<div class="arrow-left"></div>
+								<a class="left carousel-control" href="#carousel-amenities-4" role="button" data-slide="prev">
+								<div><div class="arrow-left"></div></div>
 								</a>
-								<a class="right carousel-control" href="#carousel-features-1" role="button" data-slide="next">
-							    	<div class="arrow-right"></div>
+								<a class="right carousel-control" href="#carousel-amenities-1" role="button" data-slide="next">
+							    <div><div class="arrow-right"></div></div>
 								</a>
 							</div>
 						</div>
@@ -161,11 +161,11 @@
 								</div>
 
 							  	<!-- Controls -->
-								<a class="left carousel-control" href="#carousel-features-2" role="button" data-slide="prev">
-							    	<div class="arrow-left"></div>
+								<a class="left carousel-control" href="#carousel-amenities-4" role="button" data-slide="prev">
+								<div><div class="arrow-left"></div></div>
 								</a>
-								<a class="right carousel-control" href="#carousel-features-2" role="button" data-slide="next">
-							    	<div class="arrow-right"></div>
+								<a class="right carousel-control" href="#carousel-amenities-1" role="button" data-slide="next">
+							    <div><div class="arrow-right"></div></div>
 								</a>
 							</div>
 						</div>
@@ -202,11 +202,11 @@
 								</div>
 
 							  	<!-- Controls -->
-								<a class="left carousel-control" href="#carousel-features-3" role="button" data-slide="prev">
-							    	<div class="arrow-left"></div>
+								<a class="left carousel-control" href="#carousel-amenities-4" role="button" data-slide="prev">
+								<div><div class="arrow-left"></div></div>
 								</a>
-								<a class="right carousel-control" href="#carousel-features-3" role="button" data-slide="next">
-							    	<div class="arrow-right"></div>
+								<a class="right carousel-control" href="#carousel-amenities-1" role="button" data-slide="next">
+							    <div><div class="arrow-right"></div></div>
 								</a>
 							</div>
 						</div>
@@ -244,11 +244,11 @@
 								</div>
 
 							  	<!-- Controls -->
-								<a class="left carousel-control" href="#carousel-features-4" role="button" data-slide="prev">
-							    	<div class="arrow-left"></div>
+								<a class="left carousel-control" href="#carousel-amenities-4" role="button" data-slide="prev">
+								<div><div class="arrow-left"></div></div>
 								</a>
-								<a class="right carousel-control" href="#carousel-features-4" role="button" data-slide="next">
-							    	<div class="arrow-right"></div>
+								<a class="right carousel-control" href="#carousel-amenities-1" role="button" data-slide="next">
+							    <div><div class="arrow-right"></div></div>
 								</a>
 							</div>
 						</div>
