--- a/gallery.html
+++ b/gallery.html
@@ -42,18 +42,18 @@
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<div class="responsive-nav">
 							<ul class="nav navbar-nav">
-								<li><a href="gallery.html" class="active">gallery</a></li>
-								<li><a href="amenities.html">amenities</a></li>
-								<li><a href="features.html">features</a></li>
-								<li><a href="#">floor plans</a></li>
+								<li><a href="gallery.html" class="active"><span>gallery</span></a></li>
+								<li><a href="amenities.html"><span>amenities</span></a></li>
+								<li><a href="features.html"><span>features</span></a></li>
+								<li><a href="#"><span>floor plans</span></a></li>
 							</ul>
 							<a class="navbar-brand hidden-xs hidden-sm" href="index.html">
 								<img src="img/logo.png" alt="The Hudson">
 							</a>
 							<ul class="nav navbar-nav">
-								<li><a href="neighborhood.html">neighborhood</a></li>
-								<li><a href="views.html">360° Views</a></li>
-								<li><a href="contact.html">contact</a></li>
+								<li><a href="neighborhood.html"><span>neighborhood</span></a></li>
+								<li><a href="views.html"><span>360° Views</span></a></li>
+								<li><a href="contact.html"><span>contact</span></a></li>
 							</ul>
 						</div>
 						<table class="extended-nav hidden-md hidden-lg">
@@ -97,75 +97,75 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-8 col-md-8">
-							<a href="img/gallery/gallery-6.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-6.jpg" class="img-md">
+							<a href="img/gallery/gallery1-lg.jpg" data-lightbox="gallery">
+								<img src="img/gallery/gallery1.jpg" class="img-md">
 							</a>
 						</div>
 						<div class="col-sm-4 col-md-4">
-							<a href="img/gallery/gallery-7.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-7.jpg" class="img-md">
-							</a>
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="col-sm-4 col-md-4">
-							<a href="img/gallery/gallery-8.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-8.jpg">
-							</a>
-						</div>
-						<div class="col-sm-4 col-md-4">
-							<a href="img/gallery/gallery-2.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-2.jpg">
-							</a>
-						</div>
-						<div class="col-sm-4 col-md-4">
-							<a href="img/gallery/gallery-9.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-9.jpg">
+							<a href="img/gallery/gallery2-lg.jpg" data-lightbox="gallery">
+								<img src="img/gallery/gallery2.jpg" class="img-md">
 							</a>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-4 col-md-4">
-							<a href="img/gallery/gallery-5.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-5.jpg" class="img-md">
+							<a href="img/gallery/gallery3-lg.jpg" data-lightbox="gallery">
+								<img src="img/gallery/gallery3.jpg">
+							</a>
+						</div>
+						<div class="col-sm-4 col-md-4">
+							<a href="img/gallery/gallery4-lg.jpg" data-lightbox="gallery">
+								<img src="img/gallery/gallery4.jpg">
+							</a>
+						</div>
+						<div class="col-sm-4 col-md-4">
+							<a href="img/gallery/gallery5-lg.jpg" data-lightbox="gallery">
+								<img src="img/gallery/gallery5.jpg">
+							</a>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-sm-4 col-md-4">
+							<a href="img/gallery/gallery6-lg.jpg" data-lightbox="gallery">
+								<img src="img/gallery/gallery6.jpg" class="img-md">
 							</a>
 						</div>
 						<div class="col-sm-8 col-md-8">
-							<a href="img/gallery/gallery-10.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-10.jpg" class="img-md">
+							<a href="img/gallery/gallery7-lg.jpg" data-lightbox="gallery">
+								<img src="img/gallery/gallery7.jpg" class="img-md">
 							</a>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-4 col-md-4">
-							<a href="img/gallery/gallery-11.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-11.jpg">
+							<a href="img/gallery/gallery8-lg.jpg" data-lightbox="gallery">
+								<img src="img/gallery/gallery8.jpg">
 							</a>
 						</div>
 						<div class="col-sm-4 col-md-4">
-							<a href="img/gallery/gallery-12.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-12.jpg">
+							<a href="img/gallery/gallery9-lg.jpg" data-lightbox="gallery">
+								<img src="img/gallery/gallery9.jpg">
 							</a>
 						</div>
 						<div class="col-sm-4 col-md-4">
-							<a href="img/gallery/gallery-13.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-13.jpg">
+							<a href="img/gallery/gallery10-lg.jpg" data-lightbox="gallery">
+								<img src="img/gallery/gallery10.jpg">
 							</a>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-8 col-md-8">
-							<a href="img/gallery/gallery-6.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-6.jpg" class="img-md">
+							<a href="img/gallery/gallery11-lg.jpg" data-lightbox="gallery">
+								<img src="img/gallery/gallery11.jpg" class="img-md">
 							</a>
 						</div>
 						<div class="col-sm-4 col-md-4">
-							<a href="img/gallery/gallery-7.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-7.jpg" class="img-md">
+							<a href="img/gallery/gallery12-lg.jpg" data-lightbox="gallery">
+								<img src="img/gallery/gallery12.jpg" class="img-md">
 							</a>
 						</div>
 					</div>
