--- a/neighborhood.html
+++ b/neighborhood.html
@@ -975,7 +975,7 @@
 					    <div class="tabs" id="test">
 					        <ul id="viewtabs" class="slider-thumbs list-unstyled">
 					            <li class="panel">
-					            	<div class="catFilter panel-heading accordion-toggle flex-active" data-filter-color="#4d4a56" data-filter-name="dining" data-toggle="collapse" data-parent="#viewtabs" href="#dining">
+					            	<div class="catFilter panel-heading accordion-toggle" data-filter-color="#4d4a56 " data-filter-name="dining" data-toggle="collapse" data-parent="#viewtabs" href="#dining">
 					            		Dining
 					            	</div>
 					            	<div class="panel-collapse collapse in" id="dining" data-filter-name="dining">
