--- a/amenities.html
+++ b/amenities.html
@@ -76,7 +76,7 @@
 							<span class="icon-bar"></span>
 						</button>
 					</div>
-					
+
 				</div><!-- /.container-fluid -->
 			</nav>
 		</header>
@@ -116,26 +116,17 @@
 										<img src="img/amenities/amenities-1.jpg" class="img-responsive">
 									</div>
 									<div class="item">
-										<img src="img/amenities/amenities-1-2.jpg" class="img-responsive">
-									</div>
-									<div class="item">
-										<img src="img/amenities/amenities-1-3.jpg" class="img-responsive">
-									</div>
-									<div class="item">
-										<img src="img/amenities/amenities-1-4.jpg" class="img-responsive">
-									</div>
-									<div class="item">
-										<img src="img/amenities/amenities-1-5.jpg" class="img-responsive">
+										<img src="img/amenities/amenities-1.jpg" class="img-responsive">
 									</div>
 
 								</div>
 
 							  	<!-- Controls -->
-								<a class="left carousel-control" href="#carousel-amenities-1" role="button" data-slide="prev">
-							    	<div class="arrow-left"></div>
+								<a class="left carousel-control" href="#carousel-amenities-4" role="button" data-slide="prev">
+								<div><div class="arrow-left"></div></div>
 								</a>
 								<a class="right carousel-control" href="#carousel-amenities-1" role="button" data-slide="next">
-							    	<div class="arrow-right"></div>
+							    <div><div class="arrow-right"></div></div>
 								</a>
 							</div>
 						</div>
@@ -172,11 +163,11 @@
 								</div>
 
 							  	<!-- Controls -->
-								<a class="left carousel-control" href="#carousel-amenities-2" role="button" data-slide="prev">
-							    	<div class="arrow-left"></div>
+								<a class="left carousel-control" href="#carousel-amenities-4" role="button" data-slide="prev">
+								<div><div class="arrow-left"></div></div>
 								</a>
-								<a class="right carousel-control" href="#carousel-amenities-2" role="button" data-slide="next">
-							    	<div class="arrow-right"></div>
+								<a class="right carousel-control" href="#carousel-amenities-1" role="button" data-slide="next">
+							    <div><div class="arrow-right"></div></div>
 								</a>
 							</div>
 						</div>
@@ -214,11 +205,11 @@
 								</div>
 
 							  	<!-- Controls -->
-								<a class="left carousel-control" href="#carousel-amenities-3" role="button" data-slide="prev">
-							    	<div class="arrow-left"></div>
+								<a class="left carousel-control" href="#carousel-amenities-4" role="button" data-slide="prev">
+								<div><div class="arrow-left"></div></div>
 								</a>
-								<a class="right carousel-control" href="#carousel-amenities-3" role="button" data-slide="next">
-							    	<div class="arrow-right"></div>
+								<a class="right carousel-control" href="#carousel-amenities-1" role="button" data-slide="next">
+							    <div><div class="arrow-right"></div></div>
 								</a>
 							</div>
 						</div>
@@ -257,10 +248,10 @@
 
 							  	<!-- Controls -->
 								<a class="left carousel-control" href="#carousel-amenities-4" role="button" data-slide="prev">
-							    	<div class="arrow-left"></div>
+								<div><div class="arrow-left"></div></div>
 								</a>
-								<a class="right carousel-control" href="#carousel-amenities-4" role="button" data-slide="next">
-							    	<div class="arrow-right"></div>
+								<a class="right carousel-control" href="#carousel-amenities-1" role="button" data-slide="next">
+							    <div><div class="arrow-right"></div></div>
 								</a>
 							</div>
 						</div>
