--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<title>The Hudson - Home</title>
 
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="fonts/stylesheet.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/lightbox.min.css">
@@ -108,7 +109,14 @@
 			<!-- INTRO VIDEO -->
 			<section class="intro-video">
 				<video id="my-video" preload="auto" poster="img/intro-video.png">
-				    <source src="750NHudson-ONNI-Video.webm" type='video/webm'>
+					<source src="750NHudson-ONNI-Video.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
+				    <source src="750NHudson-ONNI-Video.webm" type='video/webm; codecs="vp8, vorbis"' />
+				    <object type="application/x-shockwave-flash" data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" width="640" height="360">
+						<param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
+						<param name="allowFullScreen" value="true" />
+						<param name="wmode" value="transparent" />
+						<param name="flashvars" value='config={"clip":{"url":"HTML5Sample_flv.flv","autoPlay":false,"autoBuffering":true}}' />
+					</object>
 				</video>
 				<div class="video-controls">
 					<div><a>
@@ -149,7 +157,7 @@
 				<div class="features">					
 					<div class="row">
 						<div class="img col-sm-6 col-sm-push-6 col-md-6 col-md-push-6">
-							<img src="img/features-img.jpg" class="img-responsive">
+							<img src="img/features-lg.jpg" class="img-responsive">
 						</div>
 						<div class="description text-center col-sm-6 col-sm-pull-6 col-md-6 col-md-pull-6">
 							<div class="box-text">
@@ -165,7 +173,7 @@
 				<div class="floorplans">
 					<div class="row">
 						<div class="img col-sm-6 col-md-6">
-							<img src="img/floorplans-img.jpg" class="img-responsive">
+							<img src="img/floorplans-lg.jpg" class="img-responsive">
 						</div>
 						<div class="description text-center col-sm-6 col-md-6">
 							<div class="box-text">
@@ -181,7 +189,7 @@
 				<div class="neighborhood">
 					<div class="row">
 						<div class="img col-sm-6 col-sm-push-6 col-md-6 col-md-push-6">
-							<img src="img/neighborhood-img.jpg" class="img-responsive">
+							<img src="img/neighborhood-lg.jpg" class="img-responsive">
 						</div>
 						<div class="description text-center col-sm-6 col-sm-pull-6 col-md-6 col-md-pull-6">
 							<div class="box-text">
@@ -197,7 +205,7 @@
 				<div class="browse-360">
 					<div class="row">
 						<div class="img col-sm-6 col-md-6">
-							<img src="img/browse-360-img.jpg" class="img-responsive">
+							<img src="img/browse-360-img-lg.jpg" class="img-responsive">
 						</div>
 						<div class="description text-center col-sm-6 col-md-6">
 							<div class="box-text">
@@ -221,28 +229,28 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-8 col-md-8">
-							<a href="img/gallery/gallery-1.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-1.jpg" class="img-md">
+							<a href="img/home/gallery1-lg.jpg" data-lightbox="gallery">
+								<img src="img/home/gallery1.jpg" class="img-md">
 							</a>
 							<div class="row">
 								<div class="col-sm-6 col-md-6">
-									<a href="img/gallery/gallery-2.jpg" data-lightbox="gallery">
-										<img src="img/gallery/gallery-2.jpg" class="img-sm">
+									<a href="img/home/gallery2-lg.jpg" data-lightbox="gallery">
+										<img src="img/home/gallery2.jpg" class="img-sm">
 									</a>
 								</div>
 								<div class="col-sm-6 col-md-6">
-									<a href="img/gallery/gallery-6.jpg" data-lightbox="gallery">
-										<img src="img/gallery/gallery-6.jpg" class="img-sm">
+									<a href="img/home/gallery3-lg.jpg" data-lightbox="gallery">
+										<img src="img/home/gallery3.jpg" class="img-sm">
 									</a>
 								</div>
 							</div>
 						</div>
 						<div class="col-sm-4 col-md-4">
-							<a href="img/gallery/gallery-6.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-6.jpg" class="img-sm">
+							<a href="img/home/gallery4-lg.jpg" data-lightbox="gallery">
+								<img src="img/home/gallery4.jpg" class="img-sm">
 							</a>
-							<a href="img/gallery/gallery-5.jpg" data-lightbox="gallery">
-								<img src="img/gallery/gallery-5.jpg" class="img-md">
+							<a href="img/home/gallery5-lg.jpg" data-lightbox="gallery"> 
+								<img src="img/home/gallery5.jpg" class="img-md">
 							</a>
 						</div>
 					</div>
